	* gm2/gm2/gm2-libs-iso/ConvStringReal.def:  changed
	  procedure function name.
	* gm2/gm2/gm2-libs-iso/ConvStringReal.mod:
	  fixed many bugs in the three real conversion
	  routines.
	* gm2/gm2/gm2-libs-iso/RealConv.mod:  use new procedure
	  function name and modify parameters.
	* gm2/gm2-libs-ch/dtoa.c:  added GPL header.
	* gm2/gm2-libs-ch/ldtoa.c:  added GPL header.

2009-01-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  improved error
	  message and use MetaError rather than ErrorStringAt.

2009-01-21       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  boolean_to_unsigned changed to
	  boolean_enum_to_unsigned and modified accordingly.
	  Call boolean_enum_to_unsigned in comparison build
	  functions.
	* gm2/gm2.texi:  minor word change.
	* gm2/gm2-compiler/M2Quads.mod:  removed redundant
	  import.
	* gm2-libs-iso/SWholeIO.def:  tidied up comments
	  to fix normal page and screen width.

2009-01-20       Michael Lambert <lambert@psc.edu>

        * gm2/gm2-libs-iso/SWholeIO.mod:  (new file).
	* gm2/gm2-libs-iso/README.texi:  updated complete
	  module list.
	* gm2/Make-lang.in:  add SWholeIO.mod to the list
	  of iso modules to be compiled (GM2-LIBS-ISO-MODS).

2009-01-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/Strings.mod:  Insert (reimplemented).

2009-01-16       Gaius Mulley <gaius@gnu.org>

	* gm2/configure.in:  corrected version to 0.68
	* gm2/gccgm2.c:  added prototypes for gccgm2_BuildCmplx,
	  gccgm2_BuildIm and gccgm2_BuildRe.  gccgm2_BuildCmplx
	  detect constant operands or variable operands and skip
	  type decl.
	* gm2/gm2-compiler/M2Base.mod:  ScalarToComplex
	  return Complex even if error discovered.
	* gm2/gm2-compiler/M2Quads.mod:  check compatibility of
	  CMPLX operands and assign return value type for
	  CMPLX based on the operand types rather than CType.
	* gm2/configure.in:  added rule to detect the presence of
	  flex.
	* gm2/gccgm2.c:  gccgm2_BuildComplex test and convert