@@ -32,6 +32,11 @@
 	  function name and modify parameters.
 	* gm2/gm2-libs-ch/dtoa.c:  added GPL header.
 	* gm2/gm2-libs-ch/ldtoa.c:  added GPL header.
+	* gm2/gm2-libs-iso/RealStr.mod:  fixed more bugs.
+	* gm2/Make-lang.in:  added RealStr.mod to list of
+	  completed ISO modules.
+	* gm2/gm2-libs-iso/README.texi:  added RealStr to
+	  list of documented modules.
 
 2009-01-26       Gaius Mulley <gaius@gnu.org>
 
